--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     </table>
    <hr size="3" noshade>
     <a href="hobbies.html">HOBBIES</a><br/>
-    <a href="Contact-Me.html">Contact Details</a>
+    <a href="contact-Me.html">Contact Details</a>
   </body>
 </html>
